--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -2,7 +2,7 @@
     <footer class="row row-cols-1 row-cols-sm-2 row-cols-md-5 py-5 my-5 border-top">
         <div class="col mb-3">
             <a href="/" class="d-flex align-items-center mb-3 link-dark text-decoration-none">
-                <img src="/img/logo1.png" alt="logo" class="foto"><use xlink:href="#bootstrap"></use></a>
+                <img src="/img/logo1.png" alt="logo" class="foto"></a>
             <p class="text-muted">© 2023</p>
         </div>
 
@@ -15,11 +15,11 @@
         <div class="col mb-3">
             <h5>Developers</h5>
             <ul class="nav flex-column">
-                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Joanna Smolińska</a></li>
-                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Tomasz Kraczek</a></li>
-                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Tymoteusz Sztrumpf</a></li>
-                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Piotr Skowron</a></li>
-                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Rafał Gontarski</a></li>
+                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted" data-bs-toggle="modal" data-bs-target="#asia">Joanna Smolińska</a></li>
+                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted" data-bs-toggle="modal" data-bs-target="#tomek">Tomasz Kraczek</a></li>
+                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted" data-bs-toggle="modal" data-bs-target="#tymek">Tymoteusz Sztrumpf</a></li>
+                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted" data-bs-toggle="modal" data-bs-target="#piotr">Piotr Skowron</a></li>
+                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted" data-bs-toggle="modal" data-bs-target="#rafal">Rafał Gontarski</a></li>
             </ul>
         </div>
     </footer>
