--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -19,14 +19,24 @@
 </head>
 
 <body>
+
 <div th:replace="~{navBar}"></div>
 <div th:replace="~{header}"></div>
 <div th:replace="~{product}"></div>
-<div th:replace="~{paymentModal}"></div>
-<div th:replace="~{myCartModal}"></div>
-<div th:replace="~{loginModal}"></div>
-<div th:replace="~{singUpModal}"></div>
 <div th:replace="~{footer}"></div>
+
+
+<div th:replace="~{modals/paymentModal}"></div>
+<div th:replace="~{modals/myCartModal}"></div>
+<div th:replace="~{modals/loginModal}"></div>
+<div th:replace="~{modals/singUpModal}"></div>
+
+
+<div th:replace="~{modals/bio/asiaModal}"></div>
+<div th:replace="~{modals/bio/tomekModal}"></div>
+<div th:replace="~{modals/bio/tymekModal}"></div>
+<div th:replace="~{modals/bio/piotrModal}"></div>
+<div th:replace="~{modals/bio/rafalModal}"></div>
 
 <!--JS scripts start-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
