--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -10,7 +10,7 @@
                 <h3 class="card-title" th:text="${prod.name}">Product name</h3>
                 <p class="card-text" th:text="${prod.description}">Product description... </p>
                 <p class="lead" th:text="${prod.getPrice()}">100 USD</p>
-                <a class="btn btn-success" href="#">Add to cart</a>
+                <a th:href="@{'/add/' + ${prod.id}}" class="btn btn-success">Add to cart</a>
             </div>
         </div>
     </div>
