--- a/src/main/resources/templates/myCartModal.html
+++ b/src/main/resources/templates/myCartModal.html
@@ -21,17 +21,66 @@
                                     </div>
                                 </div>
 
+<!--                                <div class="card rounded-3 mb-4">-->
+<!--                                    <div class="card-body p-4">-->
+<!--                                        <div class="row d-flex justify-content-between align-items-center">-->
+<!--                                            <div class="col-md-2 col-lg-2 col-xl-2">-->
+<!--                                                <img-->
+<!--                                                        src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-shopping-carts/img1.webp"-->
+<!--                                                        class="img-fluid rounded-3" alt="Cotton T-shirt">-->
+<!--                                            </div>-->
+<!--                                            <div class="col-md-3 col-lg-3 col-xl-3">-->
+<!--                                                <p class="lead fw-normal mb-2">Basic T-shirt</p>-->
+<!--                                                <p><span class="text-muted">Size: </span>M <span class="text-muted">Color: </span>Grey-->
+<!--                                                </p>-->
+<!--                                            </div>-->
+<!--                                            <div class="col-md-3 col-lg-3 col-xl-2 d-flex">-->
+<!--                                                <button class="btn btn-link px-2"-->
+<!--                                                        onclick="this.parentNode.querySelector('input[type=number]').stepDown()">-->
+<!--                                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"-->
+<!--                                                         fill="currentColor" class="bi bi-dash" viewBox="0 0 16 16">-->
+<!--                                                        <path d="M4 8a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7A.5.5 0 0 1 4 8z"/>-->
+<!--                                                    </svg>-->
+<!--                                                </button>-->
+
+<!--                                                <input id="form1" min="0" name="quantity" value="2" type="number"-->
+<!--                                                       class="form-control form-control-sm"/>-->
+
+<!--                                                <button class="btn btn-link px-2"-->
+<!--                                                        onclick="this.parentNode.querySelector('input[type=number]').stepUp()">-->
+<!--                                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"-->
+<!--                                                         fill="currentColor" class="bi bi-plus" viewBox="0 0 16 16">-->
+<!--                                                        <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>-->
+<!--                                                    </svg>-->
+<!--                                                </button>-->
+<!--                                            </div>-->
+<!--                                            <div class="col-md-3 col-lg-2 col-xl-2 offset-lg-1">-->
+<!--                                                <h5 class="mb-0">$499.00</h5>-->
+<!--                                            </div>-->
+<!--                                            <div class="col-md-1 col-lg-1 col-xl-1 text-end">-->
+<!--                                                <a href="#!" class="text-danger"><i class="fas fa-trash fa-lg"></i>-->
+<!--                                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"-->
+<!--                                                         fill="currentColor" class="bi bi-cart-dash"-->
+<!--                                                         viewBox="0 0 16 16">-->
+<!--                                                        <path d="M6.5 7a.5.5 0 0 0 0 1h4a.5.5 0 0 0 0-1h-4z"/>-->
+<!--                                                        <path d="M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1H.5zm3.915 10L3.102 4h10.796l-1.313 7h-8.17zM6 14a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm7 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0z"/>-->
+<!--                                                    </svg>-->
+<!--                                                </a>-->
+<!--                                            </div>-->
+<!--                                        </div>-->
+<!--                                    </div>-->
+<!--                                </div>-->
+
                                 <div class="card rounded-3 mb-4">
-                                    <div class="card-body p-4">
+                                    <div class="card-body p-4" th:each="item, iterStat : ${cartItems}">
                                         <div class="row d-flex justify-content-between align-items-center">
                                             <div class="col-md-2 col-lg-2 col-xl-2">
-                                                <img
-                                                        src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-shopping-carts/img1.webp"
-                                                        class="img-fluid rounded-3" alt="Cotton T-shirt">
+                                                <img class="" src="http://placehold.it/400x250/000/fff"
+                                                     th:attr="src='img\product_' + ${item.product.getId()} + '.jpg'" alt=""/>
                                             </div>
                                             <div class="col-md-3 col-lg-3 col-xl-3">
-                                                <p class="lead fw-normal mb-2">Basic T-shirt</p>
-                                                <p><span class="text-muted">Size: </span>M <span class="text-muted">Color: </span>Grey
+                                                <p class="lead fw-normal mb-2"th:text="${item.product.getName()}"}>Product name</p>
+                                                <p><span class="text-muted" th:text="${item.product.getDescription()}"} ></span>
                                                 </p>
                                             </div>
                                             <div class="col-md-3 col-lg-3 col-xl-2 d-flex">
@@ -43,57 +92,7 @@
                                                     </svg>
                                                 </button>
 
-                                                <input id="form1" min="0" name="quantity" value="2" type="number"
-                                                       class="form-control form-control-sm"/>
-
-                                                <button class="btn btn-link px-2"
-                                                        onclick="this.parentNode.querySelector('input[type=number]').stepUp()">
-                                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
-                                                         fill="currentColor" class="bi bi-plus" viewBox="0 0 16 16">
-                                                        <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
-                                                    </svg>
-                                                </button>
-                                            </div>
-                                            <div class="col-md-3 col-lg-2 col-xl-2 offset-lg-1">
-                                                <h5 class="mb-0">$499.00</h5>
-                                            </div>
-                                            <div class="col-md-1 col-lg-1 col-xl-1 text-end">
-                                                <a href="#!" class="text-danger"><i class="fas fa-trash fa-lg"></i>
-                                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
-                                                         fill="currentColor" class="bi bi-cart-dash"
-                                                         viewBox="0 0 16 16">
-                                                        <path d="M6.5 7a.5.5 0 0 0 0 1h4a.5.5 0 0 0 0-1h-4z"/>
-                                                        <path d="M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1H.5zm3.915 10L3.102 4h10.796l-1.313 7h-8.17zM6 14a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm7 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0z"/>
-                                                    </svg>
-                                                </a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <div class="card rounded-3 mb-4">
-                                    <div class="card-body p-4">
-                                        <div class="row d-flex justify-content-between align-items-center">
-                                            <div class="col-md-2 col-lg-2 col-xl-2">
-                                                <img
-                                                        src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-shopping-carts/img1.webp"
-                                                        class="img-fluid rounded-3" alt="Cotton T-shirt">
-                                            </div>
-                                            <div class="col-md-3 col-lg-3 col-xl-3">
-                                                <p class="lead fw-normal mb-2">Basic T-shirt</p>
-                                                <p><span class="text-muted">Size: </span>M <span class="text-muted">Color: </span>Grey
-                                                </p>
-                                            </div>
-                                            <div class="col-md-3 col-lg-3 col-xl-2 d-flex">
-                                                <button class="btn btn-link px-2"
-                                                        onclick="this.parentNode.querySelector('input[type=number]').stepDown()">
-                                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
-                                                         fill="currentColor" class="bi bi-dash" viewBox="0 0 16 16">
-                                                        <path d="M4 8a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7A.5.5 0 0 1 4 8z"/>
-                                                    </svg>
-                                                </button>
-
-                        <input id="form_quantity" min="0" name="quantity" value="2" type="number"
+                        <input id="form_quantity" min="0" name="quantity" th:value="${item.counter}"} type="number"
                                class="form-control form-control-sm" />
 
                                                 <button class="btn btn-link px-2"
@@ -105,7 +104,7 @@
                                                 </button>
                                             </div>
                                             <div class="col-md-3 col-lg-2 col-xl-2 offset-lg-1">
-                                                <h5 class="mb-0">$499.00</h5>
+                                                <h5 class="mb-0" th:text=" '$' + ${item.product.getDefaultPrice()}"}>$499.00</h5>
                                             </div>
                                             <div class="col-md-1 col-lg-1 col-xl-1 text-end">
                                                 <a href="#!" class="text-danger"><i class="fas fa-trash fa-lg"></i>
