--- a/src/main/resources/templates/modals/myCartModal.html
+++ b/src/main/resources/templates/modals/myCartModal.html
@@ -107,7 +107,7 @@
                                                 <h5 class="mb-0" th:text=" '$' + ${item.product.getDefaultPrice()}"}>$499.00</h5>
                                             </div>
                                             <div class="col-md-1 col-lg-1 col-xl-1 text-end">
-                                                <a href="#!" class="text-danger"><i class="fas fa-trash fa-lg"></i>
+                                                <a th:href="@{'/remove/' + ${item.product.id}}" class="text-danger"><i class="fas fa-trash fa-lg"></i>
                                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
                                                          fill="currentColor" class="bi bi-cart-dash"
                                                          viewBox="0 0 16 16">
