--- a/src/main/resources/templates/modals/myCartModal.html
+++ b/src/main/resources/templates/modals/myCartModal.html
@@ -75,8 +75,8 @@
                                     <div class="card-body p-4" th:each="item, iterStat : ${cartItems}">
                                         <div class="row d-flex justify-content-between align-items-center">
                                             <div class="col-md-2 col-lg-2 col-xl-2">
-                                                <img class="" src="http://placehold.it/400x250/000/fff"
-                                                     th:attr="src='img\product_' + ${item.product.getId()} + '.jpg'" alt=""/>
+                                                <img class="foto-modal-cart" src="http://placehold.it/400x250/000/fff"
+                                                     th:attr="src='..\img\product_' + ${item.product.getId()} + '.jpg'" alt=""/>
                                             </div>
                                             <div class="col-md-3 col-lg-3 col-xl-3">
                                                 <p class="lead fw-normal mb-2"th:text="${item.product.getName()}"}>Product name</p>
