--- a/src/main/resources/templates/modals/loginModal.html
+++ b/src/main/resources/templates/modals/loginModal.html
@@ -1,3 +1,5 @@
+<html xmlns:th="http://www.thymeleaf.org">
+
 <div class="modal fade" id="login-modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true"
      th:fragment="loginModal">
     <div class="modal-dialog modal-xl">
@@ -18,24 +20,24 @@
                                                     <h4 class="mt-1 mb-5 pb-1">We are The Lotus Team</h4>
                                                 </div>
 
-                                                <form>
+                                                <form th:action="@{/login}" method="post">
                                                     <p>Please login to your account</p>
 
                                                     <div class="form-outline mb-4">
-                                                        <input type="email" id="form2Example11" class="form-control"
-                                                               placeholder="Phone number or email address"/>
+                                                        <input type="email" id="form2Example11" name="username" class="form-control"
+                                                               placeholder="Phone number or email address"required/>
                                                         <label class="form-label" for="form2Example11">Username</label>
                                                     </div>
 
                                                     <div class="form-outline mb-4">
-                                                        <input type="password" id="form2Example22"
+                                                        <input type="password"  name="password" id="form2Example22"
                                                                class="form-control"/>
                                                         <label class="form-label" for="form2Example22">Password</label>
                                                     </div>
 
                                                     <div class="text-center pt-1 mb-5 pb-1">
                                                         <button class="btn btn-primary btn-block fa-lg gradient-custom-2 mb-3"
-                                                                type="button">Log
+                                                                type="submit">Log
                                                             in
                                                         </button>
                                                         <a class="text-muted" href="#!">Forgot password?</a>
