--- a/src/main/resources/templates/modals/loginModal.html
+++ b/src/main/resources/templates/modals/loginModal.html
@@ -20,7 +20,7 @@
                                                     <h4 class="mt-1 mb-5 pb-1">We are The Lotus Team</h4>
                                                 </div>
                                                 <div id="loginError" th:if="${wrongLoginDataError != null }" style="color: red" th:text ="${wrongLoginDataError}"></div>
-                                                <div id="registrationSucces" th:if="${registrationSucces != null }" style="color: greenyellow" th:text ="${registrationSucces}"></div>
+                                                <div id="registrationSucces" th:if="${registrationSucces != null }" style="color: green" th:text ="${registrationSucces}"></div>
                                                 <form th:action="@{/login}" method="post">
                                                     <p>Please login to your account</p>
 
