--- a/src/main/resources/templates/modals/loginModal.html
+++ b/src/main/resources/templates/modals/loginModal.html
@@ -41,7 +41,7 @@
                                                                 type="submit">Log
                                                             in
                                                         </button>
-                                                        <a class="text-muted" href="#!">Forgot password?</a>
+                                                        <a class="text-muted" href="/forgotPassword">Forgot password?</a>
                                                     </div>
 
                                                     <div class="d-flex align-items-center justify-content-center pb-4">
